[package]
name = "error-ex"
version = "0.1.0"
edition = "2021"
authors = ["ICEFIR <icefir1996@gmail.com>"]
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "macro"]
license = "MIT"
repository = "https://github.com/ICEFIR/error-ex"
rust-version = "1.56"
description = "a Rust crate designed for those who desire clear, explicit, and easy-to-use error creation and handling."

[dependencies]
paste = "1.0.14"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]